Replace Paths.get with Path.of
(cherry picked from commit 0d38e615015365f61a685cf029a5106a8edc7ea7)