@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -48,16 +47,16 @@ public class CallHomeJobTest
         Path testBaseDirPath = Files.createTempDirectory("callhome" + UUID.randomUUID());
 
         String logPath = testBaseDirPath.toFile().getAbsolutePath() + "/logs";
-        Files.createDirectory(Paths.get(logPath));
+        Files.createDirectory(Path.of(logPath));
 
         List<String> serverLogFiles = List.of("server.log", "launcher.log", "gc.log");
 
         Stream.concat(serverLogFiles.stream(), Stream.of(UUID.randomUUID().toString()))
                 .forEach(fileName -> createFile(logPath, fileName));
 
-        Files.createFile(Paths.get(testBaseDirPath.toFile().getAbsolutePath(), "prop1.properties"));
+        Files.createFile(Path.of(testBaseDirPath.toFile().getAbsolutePath(), "prop1.properties"));
         String catalogPath = testBaseDirPath.toFile().getAbsolutePath() + "/catalogs";
-        Files.createDirectory(Paths.get(catalogPath));
+        Files.createDirectory(Path.of(catalogPath));
 
         List<String> catalogFiles = List.of("prop2.properties", "prop3.properties");
         catalogFiles.forEach(fileName -> createFile(catalogPath, fileName));
@@ -81,7 +80,7 @@ public class CallHomeJobTest
     private void createFile(String catalogPath, String fileName)
     {
         try {
-            Files.createFile(Paths.get(catalogPath, fileName));
+            Files.createFile(Path.of(catalogPath, fileName));
         }
         catch (IOException e) {
             throw new UncheckedIOException(e);
