@@ -21,7 +21,6 @@ import io.trino.testing.PlanTester;
 import io.trino.tpcds.Table;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
@@ -78,7 +77,7 @@ public class TestCachingTpcdsCostBasedPlan
     @Override
     protected String getQueryPlanResourcePath(String queryResourcePath)
     {
-        Path queryPath = Paths.get(queryResourcePath);
+        Path queryPath = Path.of(queryResourcePath);
         Path directory = queryPath.getParent();
         directory = directory.resolve("iceberg").resolve("cache");
         String planResourceName = queryPath.getFileName().toString().replaceAll("\\.sql$", ".plan.txt");
