@@ -23,7 +23,6 @@ import org.yaml.snakeyaml.Yaml;
 import java.io.StringReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -46,7 +45,7 @@ public class TestStarburstWorkflows
 {
     private static final Logger log = Logger.get(TestStarburstWorkflows.class);
 
-    private static final Path CI_YML_REPO_PATH = Paths.get(".github/workflows/ci.yml");
+    private static final Path CI_YML_REPO_PATH = Path.of(".github/workflows/ci.yml");
 
     @ParameterizedTest
     @MethodSource("listWorkflows")
@@ -131,7 +130,7 @@ public class TestStarburstWorkflows
 
     private static Path findRepositoryRoot()
     {
-        Path workingDirectory = Paths.get("").toAbsolutePath();
+        Path workingDirectory = Path.of("").toAbsolutePath();
         log.info("Current working directory: %s", workingDirectory);
         for (Path path = workingDirectory; path != null; path = path.getParent()) {
             if (Files.isDirectory(path.resolve(".git"))) {
